[gd_scene load_steps=14 format=3 uid="uid://u1sg0gun6vu2"]

[ext_resource type="Texture2D" uid="uid://b2j6x57xp2en0" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/1.png" id="1_fp7ra"]
[ext_resource type="Texture2D" uid="uid://dgnyjiunxp5nc" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/2.png" id="2_kv62d"]
[ext_resource type="Texture2D" uid="uid://bdiqkm8sokgyv" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/3.png" id="3_plkfa"]
[ext_resource type="Texture2D" uid="uid://cgbhtq6f1sq7u" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/4.png" id="4_kmik7"]
[ext_resource type="Texture2D" uid="uid://cswj6552plsnl" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/5.png" id="5_xs6au"]
[ext_resource type="Texture2D" uid="uid://18psondldyky" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/6.png" id="6_5w0hj"]
[ext_resource type="Texture2D" uid="uid://b714md2ej20jy" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/7.png" id="7_4drba"]
[ext_resource type="Texture2D" uid="uid://d11bn1xatfrjr" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/8.png" id="8_jxpen"]
[ext_resource type="Texture2D" uid="uid://ci7hlrppyx8nv" path="res://assets/sprites/pirate_bomb/7_objects/1_bomb/3-explotion/9.png" id="9_hadyc"]
[ext_resource type="Script" path="res://scenes/game/levels/objects/damage_object/bomb/bomb_explotion.gd" id="10_ca1gs"]
[ext_resource type="AudioStream" uid="uid://ca801ary3k02b" path="res://assets/sounds/explosion.mp3" id="11_y4kqn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kbf0l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fp7ra")
}, {
"duration": 1.0,
"texture": ExtResource("2_kv62d")
}, {
"duration": 1.0,
"texture": ExtResource("3_plkfa")
}, {
"duration": 1.0,
"texture": ExtResource("4_kmik7")
}, {
"duration": 1.0,
"texture": ExtResource("5_xs6au")
}, {
"duration": 1.0,
"texture": ExtResource("6_5w0hj")
}, {
"duration": 1.0,
"texture": ExtResource("7_4drba")
}, {
"duration": 1.0,
"texture": ExtResource("8_jxpen")
}, {
"duration": 1.0,
"texture": ExtResource("9_hadyc")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explotion",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1x6on"]
radius = 97.0464

[node name="BombExplotion" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_kbf0l")
animation = &"explotion"
autoplay = "explotion"
speed_scale = 1.5
script = ExtResource("10_ca1gs")

[node name="Area2D" type="Area2D" parent="." groups=["die"]]

[node name="DamageCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1x6on")
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_y4kqn")
autoplay = true
bus = &"Effects"

[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
